public/styles/common.scss
/* ... */
.wz-menu-agent-info {
  background-color: #fafbfd;
  margin-bottom: 0px;
  margin-left: 0px;
  margin-right: 0px;
  border-bottom: 1px solid #d3dae6;
  height: 56px;
  margin-top: 0px;
}

.wz-select-agent-modal {
  max-width: 60vw;
}

.wz-markdown-wrapper code {
  color: #1c2226;
  background-color: #e6e6e6;
  border-radius: 3px;
  font-family: courier, monospace;
  padding: 0 3px;
}

.wz-discover.hide-filter-control .globalFilterGroup__branch, kbn-dis.hide-filter-control .globalFilterGroup__branch {
  display: none;
}

/* Change custom discover size */
.wz-discover > .globalQueryBar >
.kbnQueryBar--withDatePicker >
.euiFlexItem.euiFlexItem--flexGrowZero >
.euiFlexGroup >
.euiFlexItem.kbnQueryBar__datePickerWrapper {
  max-width: 300px;
}

@media (max-width: 1300px) {
  .wz-select-agent-modal {
    max-width: 80vw;
  }

  /* Change custom discover size */
  .wz-discover > .globalQueryBar >
  .euiFlexGroup.kbnQueryBar.kbnQueryBar--withDatePicker {
    flex-wrap: wrap;
    margin-left: 0;
    margin-right: 0;
  }

  .wz-discover > .globalQueryBar >
  .euiFlexGroup.kbnQueryBar.kbnQueryBar--withDatePicker >
  .euiFlexItem {
    width: 100% !important;
    -ms-flex-preferred-size: 100% !important;
    flex-basis: 100% !important;
    margin-left: 0 !important;
    margin-right: 0 !important;
    margin-bottom: 16px !important;
  }

  .wz-discover > .globalQueryBar >
  .kbnQueryBar--withDatePicker > :first-child {
    order: 1;
    margin-top: -8px;
  }

  .wz-discover > .globalQueryBar >
  .kbnQueryBar--withDatePicker >
  .euiFlexItem.euiFlexItem--flexGrowZero >
  .euiFlexGroup >
  .euiFlexItem.kbnQueryBar__datePickerWrapper >
  .euiFlexGroup {
    width: 100%;
  }

  .wz-discover > .globalQueryBar >
  .kbnQueryBar--withDatePicker >
  .euiFlexItem.euiFlexItem--flexGrowZero >
  .euiFlexGroup >
  .euiFlexItem.kbnQueryBar__datePickerWrapper {
    flex-grow: 1!important;
    max-width: none;
  }
}

.agents-details-card {
  .agents-link-item {
    max-width: 45%;
    max-height: 100%;
    .last-agents-link {
      .euiToolTipAnchor {
        white-space: nowrap;
        max-width: 100%;
        text-overflow: ellipsis;
        overflow: hidden;
      }
    }
  }

  
}


@media (min-width: 1600px) {
  .agents-evolution-visualization{
    width: 35vw;
  }

  .agents-details-card {
    width: 55vw;
  }

}

@media (max-width: 1599px) {
  .agents-evolution-visualization{
    width: 30vw;
  }

  .agents-details-card {
    width: 45vw;
  }
}

@media (max-width: 1439px) {
  .agents-evolution-visualization{
    width: 25vw;
  }
}

@media only screen and (max-width: 1200px){
  .agents-evolution-visualization-group{
    flex-wrap: wrap;
  }
  .agents-evolution-visualization{
    width: 100vw;
  }

  .agents-details-card {
    width: 100vw;
  }
  .agents-status-pie{
    flex-grow: 1 !important;
  }
}

.chrHeaderWrapper--navIsLocked ~ .app-wrapper .wz-module-header-agent-wrapper {
  padding-left: 320px;
}

.chrHeaderWrapper--navIsLocked ~ .app-wrapper .wz-module-header-nav-wrapper {
  padding-left: 320px;
}

.icon-box-action {
  display: flex;
}

@media only screen and (max-width: 1200px) {
  .hide-agent-status {
    display: none;
  }
}

.no-focus:focus {
  background-color: transparent !important;
}


.ace_scrollbar-v {
  margin-top: -10px!important;
}
.ace_autocomplete {
  width: 390px!important;
}

.wz-devtools {
  border: 1px solid red;
  margin: 16px;
}
.wz-devtools-tab .euiButtonEmpty__text {
  height:24px;
  text-decoration: none !important;
}


.history-list {
  background-color: white;
  border:  1px solid #80808061;
  max-height: 25vh;
  overflow: auto;
  border-radius: 5px;
}

.history-list-item {
  padding: 10px;
  font-size: 14px;
  border-bottom: 1px solid #80808061 ;
}

.history-list-item:hover {
  background-color:#a4a0e11a;
}

.history-list-item-active {
  background-color:#a09dd326 !important;
}

.history-list-item:last-child {
  padding: 10px;
  border:none;
}

iframe.width-changed {
  width: 100%;
  display: block;
  border: 0;
  height: 0;
  margin: 0;
}

.selectDevTools {
  display: none;
}

.marginAddTab {
  padding-bottom: 5px;
}

@media only screen and (max-width: 1200px) {
 .wideElementsDevTools {
    display: none;
  }
  /* .selectDevTools {
    display: inline;
  } */
}
.module-table .euiFacetButton__text {
  max-height: 40px;
}

.code-block-log-viewer-container {
  max-width: calc(100vw - 41*2px);
}

.dscFieldDetails__barContainer {
  min-width: 0;
}

.withUserLogged {
  padding-top: 5%;
  width: 250px;
  margin: 0 auto;
  text-align: center;
}

.withUserLogged-logo{
  width: 140px;
  margin: 0 auto;
}

.withUserLogged-loader{
  width: 20px;
  margin: 0 auto;
}

.custom-charts-bar span.euiLoadingChart__bar{
  width: 15px;
}

.wz-width-100{
  width: 100%;
}

.wz-user-select-none{
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}

.wz-euiCard-no-title{
  .euiCard__title,
  .euiCard__description
  {
    display: none;
  }
}

/* Custom Searchbar styles */

.application .filters-search-bar .globalQueryBar, .app-container .filters-search-bar .globalQueryBar{
  padding: 0 !important;
}

@media only screen and (max-width: 960px){
  .custom-kbn-search-bar .euiSuperUpdateButton .euiSuperUpdateButton__text {
    display: none;
  }

  .custom-kbn-search-bar .euiSuperUpdateButton {
    min-width: 0;
  }
}

@media only screen and (max-width: 767px){
  .header-global-wrapper + .app-wrapper:not(.hidden-chrome) {
      left: 0!important;
  }

  .agents-details-card {
    .agents-link-item {
      max-width: 100%;
    }
  }
}

